--- a/SistTestMillon/SistTestMillon/Web.config
+++ b/SistTestMillon/SistTestMillon/Web.config
@@ -15,6 +15,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <connectionStrings>
+    <add name="Entidades" connectionString="metadata=res://*/DBEntity.csdl|res://*/DBEntity.ssdl|res://*/DBEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ELMER-PC\SQLEXPRESS2012;initial catalog=TestMillon;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
@@ -28,6 +31,9 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
+    <authentication mode="Forms">
+      <forms name="UserInventory" cookieless="UseCookies" protection="All" timeout="120" />
+    </authentication>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
