--- a/SistTestMillon/SistTestMillon/Web.config
+++ b/SistTestMillon/SistTestMillon/Web.config
@@ -32,7 +32,7 @@
       </namespaces>
     </pages>
     <authentication mode="Forms">
-      <forms name="UserInventory" cookieless="UseCookies" protection="All" timeout="120" />
+      <forms name="UserInventory"  loginUrl="~/Account/Index" cookieless="UseCookies" protection="All" timeout="120" slidingExpiration="true"/>
     </authentication>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
