--- a/SistTestMillon/SistTestMillon/Web.config
+++ b/SistTestMillon/SistTestMillon/Web.config
@@ -32,8 +32,11 @@
       </namespaces>
     </pages>
     <authentication mode="Forms">
-      <forms name="UserInventory"  loginUrl="~/Account/Index" cookieless="UseCookies" protection="All" timeout="120" slidingExpiration="true"/>
+      <forms name="UserInventory" loginUrl="~/Account/Index" cookieless="UseCookies" protection="All" timeout="120" slidingExpiration="true" />
     </authentication>
+    <authorization>
+      <deny users="?" />
+    </authorization>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
