--- a/SistTestMillon/SistTestMillon/SistTestMillon.csproj
+++ b/SistTestMillon/SistTestMillon/SistTestMillon.csproj
@@ -150,12 +150,129 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Calendar\Date\bootstrap-datetimepicker.js" />
+    <Content Include="Content\Calendar\js\bootstrap.js" />
+    <Content Include="Content\Calendar\js\bootstrap.min.js" />
+    <Content Include="Content\Calendar\js\es.js" />
+    <Content Include="Content\Calendar\js\moment.js" />
+    <Content Include="Content\Calendar\js\tempusdominus-bootstrap-4.js" />
+    <Content Include="Content\Calendar\js\tempusdominus-bootstrap-4.min.js" />
+    <Content Include="Content\css\all.css" />
+    <Content Include="Content\Calendar\bootstrap\bootstrap-datetimepicker.css" />
+    <Content Include="Content\Calendar\bootstrap\bootstrap-datetimepicker.min.css" />
+    <Content Include="Content\Calendar\bootstrap\main.css" />
+    <Content Include="Content\Calendar\bootstrap\main.js" />
+    <Content Include="Content\Calendar\bootstrap\main.min.css" />
+    <Content Include="Content\Calendar\bootstrap\main.min.js" />
+    <Content Include="Content\Calendar\core\locales-all.js" />
+    <Content Include="Content\Calendar\core\locales-all.min.js" />
+    <Content Include="Content\Calendar\core\locales\af.js" />
+    <Content Include="Content\Calendar\core\locales\ar-dz.js" />
+    <Content Include="Content\Calendar\core\locales\ar-kw.js" />
+    <Content Include="Content\Calendar\core\locales\ar-ly.js" />
+    <Content Include="Content\Calendar\core\locales\ar-ma.js" />
+    <Content Include="Content\Calendar\core\locales\ar-sa.js" />
+    <Content Include="Content\Calendar\core\locales\ar-tn.js" />
+    <Content Include="Content\Calendar\core\locales\ar.js" />
+    <Content Include="Content\Calendar\core\locales\bg.js" />
+    <Content Include="Content\Calendar\core\locales\bs.js" />
+    <Content Include="Content\Calendar\core\locales\ca.js" />
+    <Content Include="Content\Calendar\core\locales\cs.js" />
+    <Content Include="Content\Calendar\core\locales\da.js" />
+    <Content Include="Content\Calendar\core\locales\de.js" />
+    <Content Include="Content\Calendar\core\locales\el.js" />
+    <Content Include="Content\Calendar\core\locales\en-au.js" />
+    <Content Include="Content\Calendar\core\locales\en-gb.js" />
+    <Content Include="Content\Calendar\core\locales\en-nz.js" />
+    <Content Include="Content\Calendar\core\locales\es-us.js" />
+    <Content Include="Content\Calendar\core\locales\es.js" />
+    <Content Include="Content\Calendar\core\locales\et.js" />
+    <Content Include="Content\Calendar\core\locales\eu.js" />
+    <Content Include="Content\Calendar\core\locales\fa.js" />
+    <Content Include="Content\Calendar\core\locales\fi.js" />
+    <Content Include="Content\Calendar\core\locales\fr-ca.js" />
+    <Content Include="Content\Calendar\core\locales\fr-ch.js" />
+    <Content Include="Content\Calendar\core\locales\fr.js" />
+    <Content Include="Content\Calendar\core\locales\gl.js" />
+    <Content Include="Content\Calendar\core\locales\he.js" />
+    <Content Include="Content\Calendar\core\locales\hi.js" />
+    <Content Include="Content\Calendar\core\locales\hr.js" />
+    <Content Include="Content\Calendar\core\locales\hu.js" />
+    <Content Include="Content\Calendar\core\locales\id.js" />
+    <Content Include="Content\Calendar\core\locales\is.js" />
+    <Content Include="Content\Calendar\core\locales\it.js" />
+    <Content Include="Content\Calendar\core\locales\ja.js" />
+    <Content Include="Content\Calendar\core\locales\ka.js" />
+    <Content Include="Content\Calendar\core\locales\kk.js" />
+    <Content Include="Content\Calendar\core\locales\ko.js" />
+    <Content Include="Content\Calendar\core\locales\lb.js" />
+    <Content Include="Content\Calendar\core\locales\lt.js" />
+    <Content Include="Content\Calendar\core\locales\lv.js" />
+    <Content Include="Content\Calendar\core\locales\mk.js" />
+    <Content Include="Content\Calendar\core\locales\ms.js" />
+    <Content Include="Content\Calendar\core\locales\nb.js" />
+    <Content Include="Content\Calendar\core\locales\nl.js" />
+    <Content Include="Content\Calendar\core\locales\nn.js" />
+    <Content Include="Content\Calendar\core\locales\pl.js" />
+    <Content Include="Content\Calendar\core\locales\pt-br.js" />
+    <Content Include="Content\Calendar\core\locales\pt.js" />
+    <Content Include="Content\Calendar\core\locales\ro.js" />
+    <Content Include="Content\Calendar\core\locales\ru.js" />
+    <Content Include="Content\Calendar\core\locales\sk.js" />
+    <Content Include="Content\Calendar\core\locales\sl.js" />
+    <Content Include="Content\Calendar\core\locales\sq.js" />
+    <Content Include="Content\Calendar\core\locales\sr-cyrl.js" />
+    <Content Include="Content\Calendar\core\locales\sr.js" />
+    <Content Include="Content\Calendar\core\locales\sv.js" />
+    <Content Include="Content\Calendar\core\locales\th.js" />
+    <Content Include="Content\Calendar\core\locales\tr.js" />
+    <Content Include="Content\Calendar\core\locales\uk.js" />
+    <Content Include="Content\Calendar\core\locales\vi.js" />
+    <Content Include="Content\Calendar\core\locales\zh-cn.js" />
+    <Content Include="Content\Calendar\core\locales\zh-tw.js" />
+    <Content Include="Content\Calendar\core\main.css" />
+    <Content Include="Content\Calendar\core\main.js" />
+    <Content Include="Content\Calendar\core\main.min.css" />
+    <Content Include="Content\Calendar\core\main.min.js" />
+    <Content Include="Content\Calendar\Date\bootstrap-datetimepicker.es.js" />
+    <Content Include="Content\Calendar\Date\bootstrap-datetimepicker.min.js" />
+    <Content Include="Content\Calendar\Date\jquery.min.js" />
+    <Content Include="Content\Calendar\Date\moment.js" />
+    <Content Include="Content\Calendar\Date\moment.min.js" />
+    <Content Include="Content\Calendar\daygrid\main.css" />
+    <Content Include="Content\Calendar\daygrid\main.js" />
+    <Content Include="Content\Calendar\daygrid\main.min.css" />
+    <Content Include="Content\Calendar\daygrid\main.min.js" />
+    <Content Include="Content\Calendar\js\fullcalendar.css" />
+    <Content Include="Content\Calendar\js\fullcalendar.js" />
+    <Content Include="Content\Calendar\js\fullcalendar.min.css" />
+    <Content Include="Content\Calendar\js\fullcalendar.min.js" />
+    <Content Include="Content\Calendar\js\fullcalendar.print.css" />
+    <Content Include="Content\Calendar\js\fullcalendar.print.min.css" />
+    <Content Include="Content\Calendar\interaction\main.js" />
+    <Content Include="Content\Calendar\interaction\main.min.js" />
+    <Content Include="Content\Calendar\js\jquery-1.10.2.min.js" />
+    <Content Include="Content\Calendar\js\jquery-3.3.1.min.js" />
+    <Content Include="Content\Calendar\js\jquery-3.4.1.min.js" />
+    <Content Include="Content\Calendar\moment\main.js" />
+    <Content Include="Content\Calendar\moment\main.min.js" />
+    <Content Include="Content\Calendar\timegrid\main.css" />
+    <Content Include="Content\Calendar\timegrid\main.js" />
+    <Content Include="Content\Calendar\timegrid\main.min.css" />
+    <Content Include="Content\Calendar\timegrid\main.min.js" />
+    <Content Include="Content\css\bootstrap-datetimepicker.css" />
+    <Content Include="Content\css\bootstrap-datetimepicker.min.css" />
+    <Content Include="Content\css\bootstrap-datetimepicker.min.js" />
     <Content Include="Content\css\bootstrap.css" />
     <Content Include="Content\css\bootstrap.min.css" />
     <Content Include="Content\css\custom.css" />
+    <Content Include="Content\css\fontawesome.css" />
+    <Content Include="Content\css\fontawesome.min.css" />
+    <Content Include="Content\css\fontawesome.min.js" />
     <Content Include="Content\css\main.css" />
     <Content Include="Content\css\main.min.css" />
     <Content Include="Content\css\main2.min.css" />
+    <Content Include="Content\css\tempusdominus-bootstrap-4.min.css" />
     <Content Include="Content\img\millon.png" />
     <Content Include="Content\img\millonT.png" />
     <Content Include="Content\img\millonTest.png" />
@@ -281,18 +398,13 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\calendar\bootstrap\" />
-    <Folder Include="Content\calendar\core\" />
-    <Folder Include="Content\calendar\daygrid\" />
-    <Folder Include="Content\calendar\google-calendar\" />
-    <Folder Include="Content\calendar\interaction\" />
-    <Folder Include="Content\calendar\list\" />
-    <Folder Include="Content\calendar\luxon\" />
-    <Folder Include="Content\calendar\moment-timezone\" />
-    <Folder Include="Content\calendar\moment\" />
-    <Folder Include="Content\calendar\rrule\" />
-    <Folder Include="Content\calendar\timegrid\" />
+    <Folder Include="Content\Calendar\google-calendar\" />
+    <Folder Include="Content\Calendar\list\" />
+    <Folder Include="Content\Calendar\luxon\" />
+    <Folder Include="Content\Calendar\moment-timezone\" />
+    <Folder Include="Content\Calendar\rrule\" />
     <Folder Include="Content\fonts\" />
+    <Folder Include="Content\webfonts\" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
