--- a/SistTestMillon/SistTestMillon/Web.config
+++ b/SistTestMillon/SistTestMillon/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   Para obtener más información sobre cómo configurar la aplicación de ASP.NET, visite
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -16,12 +16,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="Entidades" connectionString="metadata=res://*/DBEntity.csdl|res://*/DBEntity.ssdl|res://*/DBEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ELMER-PC\SQLEXPRESS2012;initial catalog=TestMillon;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="TestMillonConnectionString" connectionString="Data Source=ELMER-PC\SQLEXPRESS2012;Initial Catalog=TestMillon;User ID=sa;Password=123456;MultipleActiveResultSets=True;Application Name=EntityFramework"
-      providerName="System.Data.SqlClient" />
+    <add name="Entidades" connectionString="metadata=res://*/DBEntity.csdl|res://*/DBEntity.ssdl|res://*/DBEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ELMER-PC\SQLEXPRESS2012;initial catalog=TestMillon;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TestMillonConnectionString" connectionString="Data Source=ELMER-PC\SQLEXPRESS2012;Initial Catalog=TestMillon;User ID=sa;Password=123456;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+    <globalization culture="en-GB" uiCulture="en-GB"/>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <pages>
