--- a/SistTestMillon/SistTestMillon/SistTestMillon.csproj
+++ b/SistTestMillon/SistTestMillon/SistTestMillon.csproj
@@ -284,7 +284,7 @@
     <Content Include="Content\js\main.min.js" />
     <Content Include="Content\scripts\jquery-3.3.1.min.js" />
     <Content Include="Content\scripts\modalform.js" />
-    <Content Include="Content\PagedList.css" />
+    <Content Include="Content\css\PagedList.css" />
     <Content Include="Content\scripts\bootstrap.js" />
     <Content Include="Content\scripts\bootstrap.min.js" />
     <None Include="Content\scripts\jquery-1.10.2.intellisense.js" />
@@ -332,9 +332,15 @@
     <Compile Include="Helpers\PatronClinicoHelper.cs" />
     <Compile Include="Helpers\SessionHelper.cs" />
     <Compile Include="Helpers\ToolsHelper.cs" />
+    <Compile Include="Models\Administrador.cs" />
+    <Compile Include="Models\Diagnostico.cs" />
     <Compile Include="Models\Historia.cs" />
+    <Compile Include="Models\Paciente.cs" />
+    <Compile Include="Models\Psicologo.cs" />
     <Compile Include="Models\Puntuacion.cs" />
     <Compile Include="Models\Response.cs" />
+    <Compile Include="Models\Update.cs" />
+    <Compile Include="Models\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reportes\Results.cs">
       <AutoGen>True</AutoGen>
@@ -389,6 +395,8 @@
     <Content Include="Views\Users\ListaUsuarios.cshtml" />
     <Content Include="Views\Historias\DetalleDiagnostico.cshtml" />
     <Content Include="Views\Diagnostico\ListaDiagnosticos2.cshtml" />
+    <Content Include="Views\Diagnostico\ListaPacientes.cshtml" />
+    <Content Include="Views\Diagnostico\ListaPsicologos.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
