--- a/SistTestMillon/SistTestMillon/SistTestMillon.csproj
+++ b/SistTestMillon/SistTestMillon/SistTestMillon.csproj
@@ -24,6 +24,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -153,10 +154,12 @@
     <Content Include="Content\Calendar\Date\bootstrap-datetimepicker.js" />
     <Content Include="Content\Calendar\js\bootstrap.js" />
     <Content Include="Content\Calendar\js\bootstrap.min.js" />
+    <Content Include="Content\Calendar\js\Chart.min.js" />
     <Content Include="Content\Calendar\js\es.js" />
     <Content Include="Content\Calendar\js\moment.js" />
     <Content Include="Content\Calendar\js\tempusdominus-bootstrap-4.js" />
     <Content Include="Content\Calendar\js\tempusdominus-bootstrap-4.min.js" />
+    <Content Include="Content\Calendar\js\utils.js" />
     <Content Include="Content\css\all.css" />
     <Content Include="Content\Calendar\bootstrap\bootstrap-datetimepicker.css" />
     <Content Include="Content\Calendar\bootstrap\bootstrap-datetimepicker.min.css" />
