--- a/SistTestMillon/SistTestMillon/Web.config
+++ b/SistTestMillon/SistTestMillon/Web.config
@@ -16,9 +16,18 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
+    
     <add name="Entidades" connectionString="metadata=res://*/DBEntity.csdl|res://*/DBEntity.ssdl|res://*/DBEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ELMER-PC;initial catalog=TestMillon;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="TestMillonConnectionString" connectionString="Data Source=ELMER-PC;Initial Catalog=TestMillon;User ID=sa;Password=123456;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
+    
+    <!--
+    <add name="Entidades" connectionString="metadata=res://*/DBEntity.csdl|res://*/DBEntity.ssdl|res://*/DBEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;workstation id=sistmillon90.mssql.somee.com;packet size=4096;user id=eimdc30_SQLLogin_1;pwd=f2obcienrr;data source=sistmillon90.mssql.somee.com;persist security info=False;initial catalog=sistmillon90;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TestMillonConnectionString" connectionString="workstation id=sistmillon90.mssql.somee.com;packet size=4096;user id=eimdc30_SQLLogin_1;pwd=f2obcienrr;data source=sistmillon90.mssql.somee.com;persist security info=False;initial catalog=sistmillon90"  />
+   --> 
   </connectionStrings>
+
+ 
+  
   <system.web>
     <globalization culture="en-GB" uiCulture="en-GB" />
     <compilation debug="true" targetFramework="4.6.1" />
