--- a/SistTestMillon/Model/App.config
+++ b/SistTestMillon/Model/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="Entidades" connectionString="metadata=res://*/DBEntity.csdl|res://*/DBEntity.ssdl|res://*/DBEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ELMER-PC\SQLEXPRESS2012;initial catalog=TestMillon;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Entidades" connectionString="metadata=res://*/DBEntity.csdl|res://*/DBEntity.ssdl|res://*/DBEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ELMER-PC;initial catalog=TestMillon;user id=sa;password=123456;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
